@@ -1,11 +1,10 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<form string="Test" col="6">
-    <label name="field"/>
-    <field name="field"/>
-    <label name="operator"/>
-    <field name="operator"/>
-    <label name="operand"/>
-    <field name="operand"/>
+<form string="Test">
+    <label name="rule_group"/>
+    <field name="rule_group"/>
+    <newline/>
+    <label name="domain"/>
+    <field name="domain" colspan="3"/>
 </form>
